# aitm-data-collection

./: .gitignore  README.md  README.rst  pyproject.toml
aitm_data_collection/: AitM-data-collection-notebook.ipynb  Statistics.ipynb  scraper.py
tests/: test_aitm_data_collection.py
